--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,14 @@
-version: '3.8'
-
+---
 services:
   media-health-check:
     image: ghcr.io/tanakrit-d/media-health-check:latest
     container_name: media-health-check
     
     environment:
-      CRON_SCHEDULE: "0 7 * * *"
+      SCAN_INTERVAL_HOURS: "24"
       SCAN_DIRECTORIES: "/data/media/tv /data/media/movies /data/media/anime/series /data/media/anime/movies"
       VALIDATOR_OPTIONS: "--verbose --prune"
       DB_PATH: "/data/db/scan.db"
-      OUTPUT_FORMAT: "json"
       
     volumes:
       - /mnt/user/data/media:/data/media:ro
